# QEnergyMonitor

./: CMakeLists.txt  README.md  energyMonitorSimulator.cpp  energyMonitorSimulator.h  main.cpp  resources.qrc
qml/: AmperageGauge.qml  AnimatedCounter.qml  BatteryIndicator.qml  CurrentGauge.qml  EnergyCounter.qml  Main.qml  StatusIndicator.qml
